--- a/package.json
+++ b/package.json
@@ -102,14 +102,18 @@
   },
   "dependencies": {
     "@electron/notarize": "^2.3.2",
+    "asar": "^3.2.0",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^6.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@builder.io/gpt-crawler": "^1.5.0",
+
     "@electron/rebuild": "^3.3.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@svgr/webpack": "^8.1.0",
@@ -242,9 +246,9 @@
   "collective": {
     "url": "https://opencollective.com/electron-react-boilerplate-594"
   },
-  "devEngines": {
-    "node": ">=14.x",
-    "npm": ">=7.x"
+  "engines": {
+    "node": ">=16.x",
+    "npm": ">=8.x"
   },
   "electronmon": {
     "patterns": [
